--- a/package.json
+++ b/package.json
@@ -16,23 +16,54 @@
   },
   "homepage": "https://github.com/NomicFoundation/hardhat-boilerplate#readme",
   "devDependencies": {
-    "@ethersproject/abi": "^5.4.7",
-    "@ethersproject/providers": "^5.4.7",
+    "@chainlink/contracts": "^0.5.1",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^1.0.1",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.1",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "@types/mocha": "^9.1.0",
-    "chai": "^4.2.0",
-    "ethers": "^5.4.7",
-    "hardhat": "^2.11.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
+    "@openzeppelin/contracts": "4.7.3",
+    "@openzeppelin/contracts-upgradeable": "4.7.3",
+    "@primitivefi/hardhat-dodoc": "^0.2.0",
+    "@thirdweb-dev/sdk": "^3.6.9",
+    "@typechain/ethers-v5": "^10.2.0",
+    "@typechain/hardhat": "^4.0.0",
+    "@types/chai": "^4.3.5",
+    "@types/fs-extra": "^9.0.13",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.45",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "chai": "^4.3.7",
+    "dotenv": "^16.0.0",
+    "erc721a": "3.3.0",
+    "erc721a-upgradeable": "^3.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "fs-extra": "^10.0.1",
+    "hardhat": "^2.9.0",
+    "hardhat-abi-exporter": "^2.4.1",
+    "hardhat-contract-sizer": "^2.5.0",
     "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.7.21",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.1.0",
-    "typescript": "^4.8.4"
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.31",
+    "mocha": "^9.2.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.8.1",
+    "ts-node": "^10.6.0",
+    "tslib": "^2.3.1",
+    "tsup": "^5.11.11",
+    "typechain": "^8.0.0",
+    "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "ethers": "^5.0.0"
+  },
+  "resolutions": {
+    "typescript": "^4.4.4"
   }
 }
